--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 #-------------------------
 /nbproject/
 .idea/*
+.phpintel/*
 
 ## Sublime Text cache files
 *.tmlanguage.cache
